--- a/HW15/TaskManager/template/profile.html
+++ b/HW15/TaskManager/template/profile.html
@@ -7,4 +7,10 @@
 <h3>{{ user.first_name }}</h3>
 <h3>{{ user.last_name }}</h3>
 
+<form action="post">
+    {% csrf_token %}
+    {{% form %}}
+    <input type="submit" name="submit">
+</form>
+
 {% endblock %}
