--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -12,18 +12,6 @@
     <div class="row">
         {% for task in tasks %}
         {% if task.status == 'O'%}
-        <!--<div class="col-4 text-center ">
-            <div class="card mt-3">
-                <div class="card-body bg-secondary">
-                    <h5 class="card-title">{{task.title}}</h5>
-                    <p class="card-text">
-                        <strong>Due Date:</strong> <br> {{ task.due_date}}
-                    </p>
-                    <a href='{{ task.id }}' style="text-decoration:none" style="text-decoration:none" class="text-info">
-                        details </a>
-                </div>
-            </div>
-        </div>-->
         <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <div class="card border-primary mt-3" style="max-width: 18rem;">
                 <h2 class="card-header">{{task.title}}</h2>
@@ -53,18 +41,6 @@
     <div class="row">
         {% for task in tasks %}
         {% if task.status == 'F'%}
-        <!--<div class="col-4 text-center ">
-            <div class="card mt-3">
-                <div class="card-body bg-secondary">
-                    <h5 class="card-title">{{task.title}}</h5>
-                    <p class="card-text">
-                        <strong>Due Date:</strong> <br> {{ task.due_date}}
-                    </p>
-                    <a href='{{ task.id }}' style="text-decoration:none" style="text-decoration:none" class="text-info">
-                        details </a>
-                </div>
-            </div>
-        </div>-->
         <div class="col-lg-4 col-md-6 col-sm-12 text-center ">
             <div class="card border-primary mt-3" style="max-width: 18rem;">
                 <h2 class="card-header">{{task.title}}</h2>
@@ -83,70 +59,9 @@
         {% endif %}
         {% endfor %}
     </div>
-</div>
-<br>
-<br>
-<br>
-<div>
-    <article class="mb-4">
-        <div class="container px-4 px-lg-5">
-            <h3>Add Task:</h3>
-            <!--<form class=" row gx-4 gx-lg-5 justify-content-center needs-validation" method="GET">
-                <label>Category: </label>
-                <input type="text" label="category" placeholder="category" name="category">
-                <label>Tags: </label>
-                <input type="text" label="tags" placeholder="tags" name="tags">
-                <input class="mt-3" type="submit" name="sub">
-            </form>-->
-            <form class="row g-3" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="col-md-4">
-                    <label for="validationDefault01" class="form-label">Title</label>
-                    <input type="text" class="form-control" id="validationDefault01" value="" name="title" required>
-                </div>
-                <div>
-                    <label for="validationTextarea" class="form-label">Description</label>
-                    <textarea class="form-control" id="validationTextarea" placeholder="Required example textarea"
-                        name="description" required></textarea>
-                </div>
-                <div class="col-md-4">
-                    <label for="validationDefault02" class="form-label">Due Date</label>
-                    <input type="datetime-local" class="form-control" id="validationDefault02" value="" name="due_date"
-                        required>
-                </div>
-                <div class="col-md-3">
-                    <label for="validationDefault04" class="form-label">State</label>
-                    <select class="form-select" id="validationDefault04" name="status" required>
-                        <option selected disabled></option>
-                        <option>O</option>
-                        <option>F</option>
-                    </select>
-                </div>
-                <div class="col-md-3">
-                    <label for="category" class="form-label">Category</label>
-                    <select class="form-select" id="category" name="category">
-                        {% for cat in category %}
-                        <option>{{cat.name}}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="col-md-3">
-                    <label for="validationDefault06" class="form-label">Tags</label>
-                    <select class="form-select" id="validationDefault06" name='tags' multiple>
-                        {% for tag in tags %}
-                        <option>{{tag.name}}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label for="formFile" class="form-label">Default file input example</label>
-                    <input class="form-control" type="file" id="formFile" name="task_file" accept="image/*">
-                </div>
-                <div class="col-12">
-                    <button class="btn btn-primary" type="submit" name="sub">Submit form</button>
-                </div>
-            </form>
-        </div>
-    </article>
+    <br>
+    <br>
+    <br>
+    <a href="{% url 'TaskApp:create_task' %}"><button>Create Task</button></a>
 </div>
 {% endblock %}
