new button for updating task added

--- a/HW15/TaskManager/template/home.html
+++ b/HW15/TaskManager/template/home.html
@@ -16,6 +16,11 @@
                             Detail
                         </button>
                     </a>
+                    <a class="text-dark" href="{% url 'TaskApp:update_task' task.id %}">
+                        <button type="button" class="btn btn-danger">
+                            Update
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
