--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -33,7 +33,7 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="{% url 'TaskApp:search' %}">Search</a>
                     </li>
-                    {% if request.is_authenticated %}
+                    {% if request.user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link text-light" href="{% url 'accounts:logout' %}">Logout</a>
                     </li>
