--- a/HW15/TaskManager/template/login.html
+++ b/HW15/TaskManager/template/login.html
@@ -4,8 +4,7 @@
 
 <form action="" method="post">
     {% csrf_token %}
-    <input type="text" name="username" value="username" placeholder="username">
-    <input type="password" name="password" value="password" placeholder="password">
-    <button>Login</button>
+    {{ form.as_p }}
+    <input type="submit" value="Login">
 </form>
 {% endblock %}
